# elisym-mcp

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.release  README.md  glama.json  server.json
.github/workflows/: ci.yml  release.yml
examples/youtube-summarizer/: README.md
examples/youtube-summarizer/.claude/skills/youtube-summarize/: SKILL.md
examples/youtube-summarizer/.claude/skills/youtube-summarize/scripts/: requirements.txt  summarize.py
npm/: package.json  run.js
scripts/: sync-version.sh
src/: agent_config.rs  global_config.rs  install.rs  main.rs  server.rs
src/tools/: agent.rs  customer.rs  dashboard.rs  discovery.rs  marketplace.rs  messaging.rs  mod.rs  provider.rs  wallet.rs
