[package]
name = "elisym-mcp"
version = "0.8.9"
edition = "2021"
rust-version = "1.93"
description = "MCP server for elisym — AI agent discovery, marketplace, and payments via Nostr"
license = "MIT"
repository = "https://github.com/elisymlabs/elisym-mcp"
homepage = "https://github.com/elisymlabs/elisym-mcp"
readme = "README.md"
keywords = ["mcp", "nostr", "ai-agents", "solana", "nip-90"]
categories = ["network-programming"]

[features]
default = []
transport-http = ["rmcp/transport-streamable-http-server", "dep:axum", "dep:tokio-util", "dep:tower-http"]

[dependencies]
axum = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"] }
elisym-core = { version = "0.16.2", features = ["payments-solana"] }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nostr-sdk = "0.37"
regex = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
bs58 = "0.5"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
solana-sdk = "2.2"
dialoguer = { version = "0.11", features = ["password"] }
console = "0.15"
